# MPI-Tuto

./: .gitmodules
exo/Bcast/: CMakeLists.txt  bcast_mpi.c  bcast_mpi_todo.c
exo/Comm/: CMakeLists.txt  communicator_mpi.cpp
exo/Distrib/: CMakeLists.txt  host.cpp  hostfile
exo/HelloWorld/: CMakeLists.txt  README.md
exo/ISendIRecv/: CMakeLists.txt  isend_irecv_mpi.cpp  isend_irecv_mpi_todo.cpp
exo/SendRecv/: CMakeLists.txt  send_recv_mpi.cpp  send_recv_mpi_todo.cpp
res/: OpenMP_MPI.md
